--- a/docs/resources/css/style.css
+++ b/docs/resources/css/style.css
@@ -87,7 +87,7 @@ section button { margin-top: 3px;}
 table 	{width:100%; text-align: left;}
 
 
-nav     { z-index: 214;
+nav     { z-index: 214; font-size: 0.7em;
           bottom:0; left: 0; right: 0; position: fixed;
           background: rgba(104,206,253,0.07); text-align: center;
           -webkit-backdrop-filter: blur(10px); backdrop-filter: blur(10px);
@@ -98,7 +98,7 @@ nav li  { width:20%; min-width:10%; max-width:7em; padding:0.3%; display:inline-
 nav li[status='selected']{  color:#00a2ff !important; transition-property:color; transition-duration: 0.7s; transition-timing-function: ease-out;}
 nav li[status='noSelect']{  transition-property: color; transition-duration: 0.7s;}
 nav .icon { font-size: 2em; display: block; margin-bottom: 0;}
-nav svg{ height: 25px; width: auto; }
+nav svg{ height: 20px; width: auto; }
 #bootScreen[bootStatus="loading"] { top:0; bottom: 0; left:0; right:0; position: fixed; display: block; z-index: 999; color:white; background: rgb(104,206,253);}
 #bootLoader {height: 400px; width: 100vw; position: absolute; margin: 20vh auto; }
 #bootLoader img {top:0; float: center; height: 300px; width: 400px; display: inline-block;}
@@ -188,6 +188,7 @@ input:checked + .slider:before { -webkit-transform: translateX(24px); -ms-transf
 
 @media screen and (min-width:300px) {
       [tab]{ display: block; width: 100%;}
+			nav { padding-bottom: 3vh;}
 }
 /* Tablet */
 @media screen and (min-width:768px) {
