--- a/docs/resources/css/style.css
+++ b/docs/resources/css/style.css
@@ -10,15 +10,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 		}
   :root{
     color-scheme: light dark;
-    --border: 1px solid var(--theme);
-		--curve: 1.7vh;
-		--green: #0ca000;
-		--red: #dd0400;
-  }
-
-@media (prefers-color-scheme: light) {
-  :root{
-    --theme: #e7e7e7;
+		--theme: #e7e7e7;
     --page: #f4f4f4;
     --fontColor: #3d3d3d;
 		--spec: #f7f7f7;
@@ -26,8 +18,16 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     --navigation: rgba(200,200,200,0.7);
     --modal: rgba(25,25,25,0.7);
 		--button: #d7d7d7;
-    }
+
+
+
+    --border: 1px solid #e7e7e7;
+		--curve: 1.7vh;
+		--green: #0ca000;
+		--red: #dd0400;
   }
+
+
   @media (prefers-color-scheme: dark) {
       :root {
         --theme: #151515;
@@ -38,6 +38,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
         --navigation: rgba(15,15,15,0.7);
         --modal: rgba(25,25,25,0.5);
 				--button: #646464;
+				--border: 1px solid #151515;
       }
 
   }
@@ -73,6 +74,7 @@ body[dark="true"]{
 		--navigation: rgba(15,15,15,0.7);
 		--modal: rgba(25,25,25,0.5);
 		--button: #646464;
+		--border: 1px solid #151515;
 }
 body::-webkit-scrollbar { display: none; }
 a       { text-decoration: none; color:inherit;}
@@ -124,17 +126,20 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 15px 0 rgba(0, 0, 0, 0.05); }
 [window]          {	padding:1.7%; margin:auto; margin-top: 7vh; position: relative;
 										background: var(--page); border: var(--border); box-shadow: 0 4px 8px 0 rgba(32, 32, 32, 0.1), 0 6px 15px 0 rgba(32, 32, 32, 0.05);  }
 [window="main"]  	{ top:100vh; left: 0; right: 0;  height: 100vh; max-width: 1200px; overflow: scroll; border-radius: 1em 1em 0 0; position: absolute; float: center;
-										box-shadow: 1px 0 0 2px rgba(32, 32, 32, 0.1), 2px 0 0 3px rgba(32, 32, 32, 0.05);}
+										box-shadow: 1px 0 0 2px rgba(32, 32, 32, 0.1), 2px 0 0 3px rgba(32, 32, 32, 0.03);}
 [window="alert"]  { height: auto; width: 70%; max-height: 40%; max-width: 400px; overflow: scroll; z-index: 417;}
 [window="small"]  { height: auto; width: 80%; max-height: 40vh; max-width: 600px; overflow: scroll;}
 [window="medium"] { height: auto; width: 85%; max-height: 50vh; max-width: 800px; overflow: scroll;}
 [window="large"]  { height: auto; width: 90%; max-height: 60vh; max-width: 1000px; overflow: scroll;}
+[window] img 			{ width: 100%; height: auto; display: block; margin: auto;}
 [status="idle"]   { display: none;  height:0;}
 [status="active"] { display: block; }
+
 
 /* Modal Special Properties */
 #cli { width: 98%; height:10em; margin: auto; position: relative;}
 #server-id { width: 98%; height:7em; margin: auto; position: relative;}
+#mcqimage { width: 100%; height: auto; display: block;}
 /* mcq */
 
 .choice		{ margin:1vh auto; padding:1.7vh; display:block; background: var(--button);
@@ -148,9 +153,11 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 15px 0 rgba(0, 0, 0, 0.05); }
 					[remarks='wrong']:hover{ filter: none; }
 
 
-#frame	{ margin:0.7em auto; height: 70vh; width: 99%;}
-#navigation_buttons { bottom: 1.7em;  height: 3.5em; width: 96.6%; max-width:1200px; opacity: 0; position: fixed;}
+#frame	{ margin:0.7em auto; width: 99%; overflow: scroll; height:70vh; padding-bottom: 10vh; }
+#frame::-webkit-scrollbar { display: none; }
+#navigation_buttons { bottom: 5px;  height: auto; width: 96.6%; max-width:1200px; opacity: 0; position: fixed; background: var(--page); }
 #navigation_buttons button {  width:7em; margin: 0.3em; padding:0.7em; background: var(--button); border-radius: var(--curve); }
+#token-id { padding: 0.7em; background: none; border: none; margin: 0.3em auto; text-align: center;}
 /* text */
 [tab] { width: 30%; min-width: 20%;}
 [content="emphasize"]  { display: block; font-size: 2.8em; font-weight: 400; }
@@ -210,6 +217,7 @@ input:checked + .slider:before { -webkit-transform: translateX(24px); -ms-transf
     and (device-height : 812px)
     and (-webkit-device-pixel-ratio : 3) {
 nav { padding-bottom: 3vh;}
+#navigation_buttons { bottom:3vh;}
 		}
 
 		@media only screen
@@ -217,6 +225,7 @@ nav { padding-bottom: 3vh;}
     and (device-height : 896px)
     and (-webkit-device-pixel-ratio : 3) {
 nav { padding-bottom: 3vh;}
+#navigation_buttons { bottom:3vh;}
 		}
 
 		@media only screen
@@ -224,4 +233,5 @@ nav { padding-bottom: 3vh;}
 		    and (device-height : 896px)
 		    and (-webkit-device-pixel-ratio : 2) {
 nav { padding-bottom: 3vh;}
+#navigation_buttons { bottom:3vh;}
 				}
