--- a/docs/resources/css/style.css
+++ b/docs/resources/css/style.css
@@ -156,8 +156,8 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 15px 0 rgba(0, 0, 0, 0.05); }
 #frame	{ margin:0.7em auto; width: 99%; overflow: scroll; height:70vh; padding-bottom: 10vh; }
 #frame::-webkit-scrollbar { display: none; }
 #navigation_buttons { bottom: 5px;  height: auto; width: 96.6%; max-width:1200px; opacity: 0; position: fixed; background: var(--page); }
-#navigation_buttons button {  width:7em; margin: 0.3em; padding:0.7em; background: var(--button); border-radius: var(--curve); }
-#token-id { padding: 0.7em; background: none; border: none; margin: 0.3em auto; text-align: center;}
+#navigation_buttons button {  width:110px; margin: 0.3em; padding:0.7em; background: var(--button); border-radius: var(--curve); }
+#token-id { padding: 0.7em; background: none; border: none; margin: 0.3em auto; text-align: center; width: 8em;}
 /* text */
 [tab] { width: 30%; min-width: 20%;}
 [content="emphasize"]  { display: block; font-size: 2.8em; font-weight: 400; }
@@ -196,7 +196,7 @@ input:checked + .slider:before { -webkit-transform: translateX(24px); -ms-transf
 
 @media screen and (min-width:300px) {
       [tab]{ display: block; width: 100%;}
-			nav { padding-bottom: 3px;}
+			nav { padding-bottom: 7px;}
 }
 /* Tablet */
 @media screen and (min-width:768px) {
@@ -217,7 +217,7 @@ input:checked + .slider:before { -webkit-transform: translateX(24px); -ms-transf
     and (device-height : 812px)
     and (-webkit-device-pixel-ratio : 3) {
 nav { padding-bottom: 3vh;}
-#navigation_buttons { bottom:3vh;}
+#navigation_buttons { margin-bottom:3vh;}
 		}
 
 		@media only screen
@@ -225,7 +225,7 @@ nav { padding-bottom: 3vh;}
     and (device-height : 896px)
     and (-webkit-device-pixel-ratio : 3) {
 nav { padding-bottom: 3vh;}
-#navigation_buttons { bottom:3vh;}
+#navigation_buttons { margin-bottom:3vh;}
 		}
 
 		@media only screen
@@ -233,5 +233,5 @@ nav { padding-bottom: 3vh;}
 		    and (device-height : 896px)
 		    and (-webkit-device-pixel-ratio : 2) {
 nav { padding-bottom: 3vh;}
-#navigation_buttons { bottom:3vh;}
+#navigation_buttons { margin-bottom:3vh;}
 				}
