--- a/docs/resources/css/style.css
+++ b/docs/resources/css/style.css
@@ -140,7 +140,12 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 15px 0 rgba(0, 0, 0, 0.05); }
 #cli { width: 98%; height:10em; margin: auto; position: relative;}
 #server-id { width: 98%; height:7em; margin: auto; position: relative;}
 #mcqimage { width: 100%; height: auto; display: block;}
+
+
+
 /* mcq */
+
+
 
 .choice		{ margin:1vh auto; padding:1.7vh; display:block; background: var(--button);
 	 					border-radius: var(--curve); border: 1px solid rgba(128,128,128,0.3);
@@ -177,7 +182,11 @@ table .toggle {width: 5em;}
 .info { font-size: 50%; width: 80%; display: block; vertical-align: top;}
 .set { width: 15%; display: inline-block; float: right; text-align: right;}
 
-
+/* promodoro */
+.tomatoTime { width: 100%; height: 3px; z-index: 417; bottom:0; left:0; right: 0; padding: 0; margin: 0; position: fixed;}
+.tomatoTime [enabled="false"] { display:none; }
+#tomatoRest { height: 3px; bottom: 0; left:0; margin: 0; padding: 0; background: var(--red);}
+#tomatoWork { height: 3px; bottom: 0; left:0; margin: 0; padding: 0; background: var(--green);}
 
 
 .switch { position: relative; display: inline-block; width:48px ; height: 24px; border:0.1px solid #aaa; border-radius: 24px;}
